--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jmmzz/cryptodata",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A crypto data fetcher in the command-line",
   "main": "./bin/index.js",
   "scripts": {
@@ -23,9 +23,10 @@
     "commander": "^4.1.1",
     "dotenv": "^8.2.0",
     "inquirer": "^7.0.4",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "supports-color": "^7.1.0"
   },
   "bin": {
-    "crypto-data": "./bin/index.js"
+    "crypto-data": "bin/index.js"
   }
 }
